<resources>
    <string name="app_name">Pelist</string>
    <string name="enter_name">List Name</string>
    <string name="add_list">Add New List</string>
    <string name="added_list">List added successfully</string>
    <string name="btn_update">Update movie</string>
    <string name="btn_delete">Delete movie</string>
    <string name="empty_list_text">No lists found</string>
    <string name="enter_desc">Enter a description</string>
    <string name="enter_title">Enter a title</string>
    <string name="watched_movies_list">Watched</string>
    <string name="watched_movies_list_description">Movies already watched</string>
    <string name="pending_movies_list">Pending</string>
    <string name="pending_movies_list_description">Pending movies to watch</string>
    <string name="no_pending">No pending movies to watch!</string>
    <string name="selectedlanguage">English</string>
    <string name="language">English</string>
    <!-- Movies -->
    <string name="add_movie">Add New Movie</string>
    <string name="added_movie">Movie added successfully</string>
    <string name="modify_movie">Modify Movie</string>
    <string name="modified_movie">Movie modified successfully</string>
    <string name="enter_dir">Director</string>
    <string name="enter_year">Year</string>
    <string name="enter_score">Score</string>
    <string name="enter_date">Date</string>
    <string name="enter_list">List</string>
</resources>
